Fixed pace height on mobile

--- a/files/css/styles.css
+++ b/files/css/styles.css
@@ -759,7 +759,7 @@ footer p {
 }
 @media only screen and (max-width: 991px){
 	.pace {
-	    height: calc(100% * 2.5);
+	    height: calc(100vh * 2.5);
 	    width: 250vh;
 	}
 	figure {
